@@ -3,10 +3,11 @@ project('tab_manager', 'c', 'swift',
   default_options : ['warning_level=3'])
 
 lws_dep = dependency('libwebsockets')
+carbon_dep = dependency('appleframeworks', modules : 'Carbon')
 
 executable('daemon',
            'daemon/main.c',
-           dependencies : lws_dep,
+           dependencies : [lws_dep, carbon_dep],
            install : true)
 
 # --- GUI ---
