@@ -5,3 +5,7 @@
     application GUI.
   - Start prototype GUI SwiftUI (inside app/ dir).
   - Using Unix Domain Sockets (UDS) to communicate b/w the daemon and the GUI.
+  - Using Carbon to register global keybind (Ctrl+Shift+J for now) to trigger program callback.
+
+TODO:
+- Restrict triggering of global keybind to only browser sessions.
